[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "bb_change_broker"
version = "1.0.0"
description = "A module to publish changes to buildbot via a message broker"
requires-python = ">=3.6"
readme = "README.md"
authors = [{ name = "Fabian Stadler", email = "mail@fabianstadler.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["pika"]

[tool.setuptools]
script-files = ["bin/bb_change_broker"]

[tool.coverage.run]
# the following files are omitted when using coverage
omit = [
    "bb_change_broker/server.py",
    "bb_change_broker/client.py",
    "bb_change_broker/util/cli.py",             # cannot be tested without cli
    "bb_change_broker/backend/cli.py",          # cannot be tested without cli
    "bb_change_broker/backend/http_handler.py", # cannot be tested without http server
    "bb_change_broker/backend/broker.py",       # cannot be tested without broker
    "*__init__.py",                             # empty
    "*base.py",                                 # abstract class, no testable methods
]
